--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,20 +1,17 @@
-# Nixpacks configuration for Railway - x86_64 Linux
+# Nixpacks configuration for Railway - SIMPLE VERSION
 [phases.setup]
-nixPkgs = ["nodejs_22", "chromium"]
-nixLibs = ["glibc", "gcc-unwrapped", "nss", "nspr", "atk", "at-spi2-atk", "cups", "dbus", "libdrm", "gtk3", "pango", "cairo", "xorg.libX11", "xorg.libXcomposite", "xorg.libXdamage", "xorg.libXext", "xorg.libXfixes", "xorg.libXrandr", "mesa", "expat", "alsa-lib"]
+nixPkgs = ["nodejs_22"]
 
 [phases.install]
 cmds = [
-  "npm ci --prefer-offline --no-audit",
-  "npx puppeteer browsers install chrome --platform=linux --arch=x64"
+  "npm ci --prefer-offline --no-audit"
 ]
 
 [phases.build]
 cmds = ["npm run build"]
 
 [start]
-cmd = "npm run railway:start"
+cmd = "npm run start"
 
 [variables]
-PUPPETEER_SKIP_CHROMIUM_DOWNLOAD = "false"
-PUPPETEER_EXECUTABLE_PATH = "/root/.cache/puppeteer/chrome/linux-*/chrome-linux64/chrome"
+NODE_ENV = "production"
